--- a/Dicee/Base.lproj/Main.storyboard
+++ b/Dicee/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,39 +15,98 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Dicee" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="newbackground" translatesAutoresizingMaskIntoConstraints="NO" id="Po2-4Z-aTQ">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newbackground" translatesAutoresizingMaskIntoConstraints="NO" id="Po2-4Z-aTQ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="VLT-fr-LlB">
-                                <rect key="frame" x="67" y="38" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="7zO-3z-7GQ">
-                                <rect key="frame" x="215" y="273" width="120" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="E0h-HA-q9k">
-                                <rect key="frame" x="40" y="273" width="120" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LBP-40-nCF">
-                                <rect key="frame" x="16" y="598" width="343" height="49"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.60797375440597534" green="0.11096744984388351" blue="0.12414858490228653" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="40"/>
-                                <state key="normal" title="roll">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="rollDices:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eTj-Fs-dbY"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rxj-cg-czq" userLabel="Top Container">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="346"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="VLT-fr-LlB">
+                                        <rect key="frame" x="67.666666666666686" y="109" width="240" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="4Lt-Jr-QOk"/>
+                                            <constraint firstAttribute="width" constant="240" id="zeG-Ik-z4c"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="VLT-fr-LlB" firstAttribute="centerX" secondItem="Rxj-cg-czq" secondAttribute="centerX" id="tCZ-d2-TD5"/>
+                                    <constraint firstItem="VLT-fr-LlB" firstAttribute="centerY" secondItem="Rxj-cg-czq" secondAttribute="centerY" id="v1q-PG-VQx"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TFi-CL-oOq" userLabel="Middle Container">
+                                <rect key="frame" x="40" y="346" width="295" height="120"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="7zO-3z-7GQ">
+                                        <rect key="frame" x="175" y="0.0" width="120" height="120"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="V8G-fx-STm"/>
+                                            <constraint firstAttribute="height" constant="120" id="cOh-Mq-XUQ"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="E0h-HA-q9k">
+                                        <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="XTP-nx-Cg6"/>
+                                            <constraint firstAttribute="height" constant="120" id="fDw-ee-ohk"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="E0h-HA-q9k" firstAttribute="leading" secondItem="TFi-CL-oOq" secondAttribute="leading" id="Hqt-DO-ly1"/>
+                                    <constraint firstAttribute="trailing" secondItem="7zO-3z-7GQ" secondAttribute="trailing" id="Vhh-78-qAw"/>
+                                    <constraint firstItem="E0h-HA-q9k" firstAttribute="top" secondItem="TFi-CL-oOq" secondAttribute="top" id="YMf-fi-nwh"/>
+                                    <constraint firstItem="7zO-3z-7GQ" firstAttribute="top" secondItem="TFi-CL-oOq" secondAttribute="top" id="buB-qD-hUO"/>
+                                    <constraint firstAttribute="height" constant="120" id="rMl-qm-mwF"/>
+                                    <constraint firstAttribute="width" constant="295" id="z2I-wW-CE3"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kfm-et-xZE" userLabel="Bottom Container">
+                                <rect key="frame" x="0.0" y="466" width="375" height="312"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LBP-40-nCF">
+                                        <rect key="frame" x="35.666666666666657" y="131.66666666666663" width="303.66666666666674" height="49"/>
+                                        <color key="backgroundColor" red="0.60797375440597534" green="0.11096744984388351" blue="0.12414858490228653" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="49" id="UvS-e7-L7J"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="40"/>
+                                        <state key="normal" title="roll">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="rollDices:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eTj-Fs-dbY"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="LBP-40-nCF" firstAttribute="leading" secondItem="Kfm-et-xZE" secondAttribute="leading" constant="35.670000000000002" id="0dP-z1-ofD"/>
+                                    <constraint firstItem="LBP-40-nCF" firstAttribute="centerX" secondItem="Kfm-et-xZE" secondAttribute="centerX" id="CMu-i2-xJY"/>
+                                    <constraint firstAttribute="trailing" secondItem="LBP-40-nCF" secondAttribute="trailing" constant="35.670000000000002" id="gW8-pv-tAu"/>
+                                    <constraint firstItem="LBP-40-nCF" firstAttribute="centerY" secondItem="Kfm-et-xZE" secondAttribute="centerY" id="zr0-P7-PVK"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Po2-4Z-aTQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="0UM-Gk-M57"/>
+                            <constraint firstItem="Kfm-et-xZE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0gg-Yw-AmW"/>
+                            <constraint firstItem="TFi-CL-oOq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="3E8-eY-FNf"/>
+                            <constraint firstItem="Kfm-et-xZE" firstAttribute="top" secondItem="TFi-CL-oOq" secondAttribute="bottom" id="41n-Gw-b0Z"/>
+                            <constraint firstItem="Rxj-cg-czq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="81S-1Y-7NB"/>
+                            <constraint firstItem="Po2-4Z-aTQ" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="Dgq-on-lHc"/>
+                            <constraint firstItem="TFi-CL-oOq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="G8h-iY-QNT"/>
+                            <constraint firstItem="Rxj-cg-czq" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="HTV-uf-lex"/>
+                            <constraint firstItem="Po2-4Z-aTQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="LJF-i2-HEu"/>
+                            <constraint firstItem="Rxj-cg-czq" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="O4l-jx-6YC"/>
+                            <constraint firstItem="Kfm-et-xZE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ony-sY-BQa"/>
+                            <constraint firstItem="TFi-CL-oOq" firstAttribute="top" secondItem="Rxj-cg-czq" secondAttribute="bottom" id="PVh-rf-Ft4"/>
+                            <constraint firstItem="Kfm-et-xZE" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Rgh-05-SXX"/>
+                            <constraint firstItem="Po2-4Z-aTQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YGJ-Pk-RUM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -57,12 +116,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138.40000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="137.68115942028987" y="138.58695652173915"/>
         </scene>
     </scenes>
     <resources>
         <image name="dice1" width="100" height="100"/>
         <image name="diceeLogo" width="196" height="128"/>
-        <image name="newbackground" width="444.5" height="414"/>
+        <image name="newbackground" width="444.66665649414062" height="414.33334350585938"/>
     </resources>
 </document>
